deploy/base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traintrack-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traintrack-backend
  template:
    metadata:
      labels:
        app: traintrack-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: traintrack-backend
          image: ghcr.io/elarkaso/train-track-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: traintrack-backend
spec:
  selector:
    app: traintrack-backend
  ports:
    - port: 3000
      targetPort: 3000
